djvusmooth (0.2.9) UNRELEASED; urgency=low

  * 

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 08 Sep 2010 22:43:18 +0200

djvusmooth (0.2.8) unstable; urgency=low

  * Update the Russian translation, thanks to Kyrill Detinov.
  * Handle directories with non-ASCII characters.
    http://bugs.debian.org/595002
  * Fix editing line/arrow annotations.
    http://bugs.debian.org/595012

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 31 Aug 2010 15:15:01 +0200

djvusmooth (0.2.7) unstable; urgency=low

  * Add Russian translation, contributed by Kyrill Detinov.
  * Handle non-ASCII metadata keys.
    Thanks to Aleš Kapica for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Sat, 26 Jun 2010 14:34:19 +0200

djvusmooth (0.2.6) unstable; urgency=low

  * Add keyboard shortcut Ctrl+G for “Go to page…”.
    Thanks to Kyrill Detinov for the bug report and the patch.
  * Reopen document after save, so that it's possible to display non-cached
    pages. Thanks to Kyrill Detinov for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 15 Jun 2010 21:08:26 +0200

djvusmooth (0.2.5) unstable; urgency=low

  * Fix setup.py to install all the required packages.
    Thanks to Kyrill Detinov for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 08 Apr 2010 18:06:50 +0200

djvusmooth (0.2.4) unstable; urgency=low

  * Fix regression in handling sidebar events with wxWidgets 2.8. Thanks to
    Janusz S. Bień for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 31 Mar 2010 12:53:04 +0200

djvusmooth (0.2.3) unstable; urgency=low

  * Fix issues with “Overprinted annotation properties” dialog:
    + Allow to turn off the “allow visible” property.
      Thanks to Janusz S. Bień for the bug report.
      http://bugs.debian.org/574362
    + Disable the “allow visible” checkbox if a hyperlink has no border.
      http://bugs.debian.org/574338
    + Display real border width instead of hard-coded 1.
    + Use the term “width” rather than “thickness” consistently.