@@ -1,8 +1,9 @@
 djvusmooth (0.2.9) UNRELEASED; urgency=low
 
-  * 
+  * Windows: guess location of DjVuLibre DLLs and tools (requires
+    python-djvulibre ≥ 0.3.3).
 
- -- Jakub Wilk <jwilk@jwilk.net>  Wed, 08 Sep 2010 22:43:18 +0200
+ -- Jakub Wilk <jwilk@jwilk.net>  Tue, 18 Jan 2011 19:45:01 +0100
 
 djvusmooth (0.2.8) unstable; urgency=low
 
